--- a/index.html
+++ b/index.html
@@ -8,6 +8,64 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <!----------------- Header ------------------>
+  <header>
+    <h1><span>Web</span>App</h1>
+    <div class='bell-icon-container'>
+      <img src="./svgs/bell.svg" alt="bell icon">
+      <div id=#notifications></div>
+    </div>
+    <img src="./images/member-1.jpg" alt="student">
+  </header>
+
+  <!----------------- Navbar ------------------>
+  <nav>
+    <a href="#">
+      <img src="./svgs/home.svg" alt="">
+    </a>
+    <a href="#">
+      <img src="./svgs/bar-chart.svg" alt="">
+    </a>
+    <a href="#">
+      <img src="./svgs/members.svg" alt="">
+    </a>
+    <a href="#">
+      <img src="./svgs/settings.svg" alt="">
+    </a>
+  </nav>
+<!----------------- Main ------------------>
+  <main>
+    <div class="main-header">
+      <h2 class="headline">Dashboard</h2>
+      <div class="main-header-search">
+        <input type="search" placeholder="Search">
+      </div>
+    </div>
+    <!-- alert banner -->
+    <div class="alert" id='alert'>
+      <!-- JS will insert alert here -->
+    </div>
+
+  <!----------------- Traffic ------------------>
+  <section class="traffic">
+    <div class="traffic-header">
+      <h3>Traffic</h3>
+      <ul class="traffic-nav">
+          <li class="traffic-nav-link">Hourly</li>
+          <li class="traffic-nav-link">Daily</li>
+          <li class="traffic-nav-link active">Weekly</li>
+          <li class="traffic-nav-link">Monthly</li>
+      </ul>
+    </div>
+    <div class="widget-container-full">
+      <!-- Element line graph will attach to -->
+      <canvas id='traffic-chart'></canvas>
+    </div>
+  </section>
+
+
+
+
+  </main>
 </body>
 </html>
