--- a/index.html
+++ b/index.html
@@ -59,13 +59,137 @@
     </div>
     <div class="widget-container-full">
       <!-- Element line graph will attach to -->
-      <canvas id='traffic-chart'></canvas>
+      <canvas id='traffic-chart'>
+
+      </canvas>
     </div>
   </section>
 
+  <!----------------- Daily Traffic ------------------>
+  <section class="daily">
+    <h3>Daily Traffic</h3>
+    <div class="widget-container-half">
+      <!-- element bar graph will attach to -->
+      <canvas id='daily-chart'></canvas>
+    </div>
+  </section>
 
+  <!----------------- Mobile Users ------------------>
+    <section class="mobile">
+      <h3>Mobile Users</h3>
+      <div class="widget-container-half">
+        <!-- element doghnut will attach to -->
+        <canvas id='mobile-chart'></canvas>
+      </div>
+    </section>
 
+    <!----------------- Mobile Users ------------------>
+    <section class='social-stats'>
+      <div class="social-container">
+          <div class="social-image">
+            <!-- inline SVG not included -->
+          </div>
+          <div class="social-text">
+            <p>Facebook</p>
+            <p>10,345</p>
+          </div>
+        </div>
 
+        <div class="social-image">
+          <!-- inline SVG not included -->
+        </div>
+        <div class="social-text">
+          <p>Instagram</p>
+          <p>10,345</p>
+        </div>
+        </div>
+
+        <div class="social-image">
+          <!-- inline SVG not included -->
+        </div>
+        <div class="social-text">
+          <p>Twitter</p>
+          <p>10,345</p>
+        </div>
+      </div>
+    </section>
+  <!----------------- New Members ------------------>
+<section class='members'>
+    <h3>New Members</h3>
+
+      <div class='members-container'>
+        <img src="images/member-1.jpg" alt="profile-img">
+        <div class="members-text">
+          <p>Victoria Chambers</p>
+          <a href="#">victoria.chambers80@example.com</a>
+        </div>
+        <p>10/15/20</p>
+      </div>
+
+      <div class='members-container'>
+        <img src="images/member-2.jpg" alt="profile-img">
+        <div class="members-text">
+          <p>Dale Byrd</p>
+          <a href="#">dale.byrd42@example.com</a>
+        </div>
+        <p>10/15/20</p>
+      </div>
+
+      <div class='members-container'>
+        <img src="images/member-3.jpg" alt="profile-img">
+        <div class="members-text">
+          <p>Dawn Wood</p>
+          <a href="#">dawn.wood@example.com</a>
+        </div>
+        <p>10/15/20</p>
+      </div>
+
+      <div class='members-container'>
+        <img src="images/member-4.jpg" alt="profile-img">
+        <div class="members-text">
+          <p>Dan Oliver</p>
+          <a href="#">dan.oliver82@example.com</a>
+        </div>
+        <p>10/15/20</p>
+      </div>
+    </section>
+
+  <!----------------- Recent Activity ------------------>
+  <section class='activity'>
+    <h3>Recent Activity</h3>
+  
+    <div class='members-container'>
+      <img src="images/member-1.jpg" alt="profile-img">
+      <div class="members-text">
+        <p>Victoria Chambers commented on WebApp's SEO Tips</p>
+        <p>4 hours ago</p>
+      </div>
+    </div>
+  
+    <div class='members-container'>
+      <img src="images/member-2.jpg" alt="profile-img">
+      <div class="members-text">
+        <p>Dale Byrd liked the post Facebook's Changes for 2021</p>
+        <p>5 hours ago</p>
+      </div>
+    </div>
+
+    <div class='members-container'>
+      <img src="images/member-3.jpg" alt="profile-img">
+      <div class="members-text">
+        <p>Dawn Wood commented on Facebook's Changes for 2021</p>
+        <p>4 hours ago</p>
+      </div>
+    </div>
+
+    <div class='members-container'>
+      <img src="images/member-4.jpg" alt="profile-img">
+      <div class="members-text">
+        <p>Dan Oliver posted WebApp's SEO Tips</p>
+        <p>1 day ago</p>
+      </div>
+    </div>
+  </section>
   </main>
 </body>
 </html>
