fixed button containers

--- a/index.html
+++ b/index.html
@@ -238,21 +238,23 @@
         <section class="settings">
           <h3 class='uppercase container'>Settings</h3>
             <div class="toggle-container container">
-
-              <div class="toggle2-container">
-                <p>Send Email Notifications</p>
+            <div class="toggle2-container">
+              <p>Send Email Notifications</p>
+              <div class="toggle3-container">    
                 <input type="checkbox" id="toggle" class="checkbox" />
-                <label for="toggle" class="offBtn">OFF</label>
                 <label for="toggle" class="onBtn">ON</label>
+                <label for="toggle" class="offBtn">OFF</label>
               </div>
-              
+            </div>
+              <br>
               <div class="toggle2-container">
-                <p>Set Profile to Public</p>
+              <p>Set Profile to Public</p>
+              <div class="toggle3-container">              
                 <input type="checkbox" id="toggle" class="checkbox" />  
-                <label for="toggle" class="offBtn">OFF</label>           
                 <label for="toggle" class="onBtn">ON</label>           
+                <label for="toggle" class="offBtn">OFF</label>           
               </div>
-
+              </div>
             </div>
           <select id="timezone" class="form-field container">
             <option disabled selected class='container'>Select a Timezone</option>
