--- a/index.html
+++ b/index.html
@@ -141,7 +141,6 @@
             </div>
             </div>
           </div>
-        </div>
       </section>
         <hr class="bottom-line hide">
     <!----------------- New Members ------------------>
@@ -250,7 +249,7 @@
               <div class="toggle2-container">
               <p>Set Profile to Public</p>
               <div class="toggle3-container">              
-                <input type="checkbox" id="toggle" class="checkbox" />  
+                <input type="checkbox" id="toggle2" class="checkbox" />  
                 <label for="toggle" class="onBtn">ON</label>           
                 <label for="toggle" class="offBtn">OFF</label>           
               </div>
@@ -352,7 +351,6 @@
             <button class="button-disabled" id='cancel'>Cancel</button>
           </div>
         </section>
-      </div>
   </main>
   <script src='app.js'></script>
 </body>
